<resources>
    <string name="app_name">CallMeMaybe</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="twitter_callback_url">twitterdemo</string>

    <string name="welcome">Welcome!</string>
    <string name="HintInput">账号：</string>
    <string name="HintPwd">密码：</string>
    <string name="login_acc">账号密码登录</string>
    <string name="login">登   录</string>
    <string name="RememberPwd">记住密码</string>
    <string name="ForgetPwd">忘记密码？</string>
    <string name="noAccount">没有账号？请点击</string>
    <string name="Register"><u>注册</u></string>
    <string name="title_activity_register">register</string>
    <string name="InputUsername">账号:</string>
    <string name="InputPwd">密码:</string>
    <string name="PwdAgain">确认密码:</string>
    <string name="MailTip">请输入常用邮箱，便于找回密码</string>
    <string name="InputMail">请输入您的邮箱</string>
    <string name="RegCommit">提   交</string>
    <string name="HintRoomName">房间名：</string>
    <string name="HintAddress">餐厅地址：</string>
    <string name="HintMax">最大人数：</string>
    <string name="HintTime">时间(day:hour:min如26:12:00)</string>
    <string name="HintNote">备注：</string>
    <string name="create">创建</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_launch">Launch</string>
    <string name="title_activity_single_chat">SingleChat</string>
    <string name="title_activity_room">Room</string>
    <string name="title_activity_add_friend">添加好友</string>
    <string name="startSessions">添加手机号</string>
    <string name="addFriends">添加好友</string>
    <string name="scanQRcode">添加饭桌</string>
    <string name="feedback">反馈</string>
    <string name="logOut">注销</string>
    <string name="unspport_message_type">暂不支持此消息类型</string>
    <string name="message_is_null">消息不能为空</string>
    <string name="chat_base_list_view_listEmptyHint">无数据</string>
    <string name="chat_base_list_view_noMore">已无更多</string>
    <string name="chat_utils_tips">提示</string>
    <string name="chat_utils_please_choose">请选择</string>
    <string name="chat_utils_share">分享</string>
    <string name="chat_utils_right">好的</string>
    <string name="chat_utils_hardLoading">努力加载中…</string>
    <string name="chat_common_cancel">取消</string>
    <string name="chat_bottom_record_layout_pressToRecord">按住录音</string>
    <string name="chat_sending">发送中</string>
    <string name="chat_received">已接收</string>
    <string name="chat_common_emptyStr" />
    <string name="chat_common_avatar">头像</string>
    <string name="chat_common_username">用户名</string>
    <string name="chat_common_nickname">昵称</string>
    <string name="chat_common_please_input_hint">请输入{0}</string>
    <string name="chat_common_change_title">{0}</string>
    <string name="chat_sent">已发送</string>
    <string name="chat_failed">失败</string>
    <string name="chat_newMessage">新的消息</string>
    <string name="chat_image">图片</string>
    <string name="chat_cancelRecord">取消录音</string>
    <string name="chat_audio">语音</string>
    <string name="chat_position">位置</string>

</resources>
