<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/RegUsername"
                    style="@style/TextStyle"
                    android:drawableRight="@drawable/ic_done_white_24dp"
                    android:hint="@string/InputUsername"
                    android:textColorHint="@color/TextColor_hint"
                    android:layout_weight="0.9">
                </EditText>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/RegPwd"
                    style="@style/TextStyle"
                    android:drawableRight="@drawable/ic_done_white_24dp"
                    android:hint="@string/InputPwd"
                    android:inputType="textPassword"
                    android:textColorHint="@color/TextColor_hint"
                    android:layout_weight="0.9">
                </EditText>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/RegPwdAgain"
                    style="@style/TextStyle"
                    android:drawableRight="@drawable/ic_done_white_24dp"
                    android:hint="@string/PwdAgain"
                    android:inputType="textPassword"
                    android:textColorHint="@color/TextColor_hint"
                    android:layout_weight="0.9">
                </EditText>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
            </LinearLayout>



            <Button
                android:id="@+id/RegCommit"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:background="@drawable/round_button"
                android:gravity="center"
                android:text="@string/Register"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold"
                android:onClick="regCommit" >
            </Button>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"/>

</LinearLayout>